# SFM-optimization

./: Makefile  README.md  a.out  analysis.txt  callgrind.out.9571  gmon.out  main.cpp  screenshot-1427239706.cam  screenshot-1427239731.cam  screenshot-1427239747.cam  screenshot-1427491434.cam  screenshot-1427491444.cam  sfm  sfm.backup  sfm_pcl.pcd  sfm_pcl1.pcd  sfm_pcl_withoutIntrinsics.pcd
SfMLib/: Makefile
SfMLib/inc/: Common.h  MultiCameraPnP.h
SfMLib/src/: BundleAdjuster.cpp  Common.cpp  FindCameraMatrices.cpp  MultiCameraPnP.cpp  Triangulation.cpp
SfMLib/src/features/: .RichFeatureMatcher.cpp.swp  FeatureMatching.cpp  GPUSURFFeatureMatcher.cpp  OFFeatureMatcher.cpp  RichFeatureMatcher.cpp  RichFeatureMatcher.cpp~
Source/: .gitignore  .results.swp  Makefile  README.md  af.out  gmon.out  main.cpp  old_Makefile
Source/SfMLib/: Makefile
Source/SfMLib/inc/: BundleAdjuster.h  Distance.h  FindCameraMatrices.h  MultiCameraPnP.h
Source/SfMLib/src/: .BundleAdjuster.cpp.swn  .BundleAdjuster.cpp.swo  BundleAdjuster.cpp  Common.cpp  FindCameraMatrices.cpp  MultiCameraPnP.cpp  SfMUpdateListener.cpp  Triangulation.cpp
Source/output/: 1.out  2.out  3.out  4.out  5.out  6.out  7.out  8.out  9.out
backups/: RichFeatureMatcher | clean code.cpp
backups/sfm-modified/: Makefile  README.md
backups/sfm-original/: gmon.out  sfm_pcl.pcd
gui/: CMakeLists.txt  README.md
gui/include/: CloudViewer.h
gui/src/: CloudViewer.cpp  main.cpp
new/: Makefile  main.cpp  test
past callgrind results/: analysisWithIntrinsics.txt  callgrind.out.28995  callgrind.out.739  callgrind.out.9595  callgrind_result_1.txt  callgrind_result_WithIntrinsics.txt  gmon.out
(+41 files in other folders)
